Added drone.io config

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-flask
-flask-wtf
-email-validator
-flask-sqlalchemy
-flask-babel
-flask-login
-flask-bcrypt
+Flask==1.1.4
+Flask-WTF
+Flask-SQLAlchemy
+Flask-Babel
+Flask-Login
+Flask-Bcrypt
+SQLAlchemy
+gunicorn
 environs
 is_safe_url
-gunicorn
+email-validator
