--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
-FLASK_ENV = "development"
+FLASK_APP = 'app'
+FLASK_ENV = 'development'
 
 # Some random string, keep it secret, it's used for session signing
 SECRET_KEY = 'sd229cdn72'
-# Cross site scription protection for forms
-SESSION_KEY = 'm32n21nd872'
 
 # Database url accoring to SQLAlchemy format
 # dialect://username:password@host:port/database
 # sqlite://test.db
 # mysql://username:password@server/db
-DATABASE_URL = 'sqlite:///test.db'
+# DATABASE_URL = 'sqlite:///test.db'
