--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-Flask==1.1.4
-Flask-WTF
-Flask-SQLAlchemy
-Flask-Babel
-Flask-Login
-Flask-Bcrypt
-Flask-Misaka
+flask>=2.0.1
+flask-wtf
+flask-sqlalchemy
+flask-babel
+flask-login
+flask-bcrypt
+flask-misaka
 flask-migrate
-SQLAlchemy
 gunicorn
-environs
 is_safe_url
 email-validator
 datetime
