Moved pylint configuration to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,41 @@ per-file-ignores = __init__.py:F401
 warn_return_any = True
 warn_unused_configs = True
 ignore_missing_imports = True
+
+[MASTER]
+load-plugins=pylint_flask_sqlalchemy
+jobs=2
+
+[pylint.MASTER]
+disable=raw-checker-failed,
+        bad-inline-option,
+        locally-disabled,
+        file-ignored,
+        suppressed-message,
+        useless-suppression,
+        deprecated-pragma,
+        use-symbolic-message-instead,
+        too-few-public-methods,
+        no-self-use
+
+
+[pylint.BASIC]
+good-names=i,
+           j,
+           k,
+           ex,
+           e,
+           id,
+           os,
+           ip,
+           Run,
+           _
+
+[pylint.FORMAT]
+max-line-length=80
+
+[pylint.DESIGN]
+max-args=5
+
+[pylint.TYPECHECK]
+ignored-classes=optparse.Values,thread._local,_thread._local,scoped_session
