--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,14 @@
+[coverage:run]
+branch = True
+omit = src/db/env.py,src/db/versions/*  # define paths to omit
+
+[coverage:report]
+show_missing = True
+skip_covered = True
+
+[tool:pytest]
+addopts = --cov=app --cov-branch --cov-report term-missing --cov-fail-under=80
+
 [flake8]
 per-file-ignores = __init__.py:F401
 
