--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: .
     restart: always
     ports:
-      - "${PORT}:80"
+      - "${PORT:-8080}:80"
     depends_on:
       - db
     environment:
@@ -13,7 +13,7 @@ services:
       - MAIL_PASSWORD
       - MAIL_SERVER
       - MAIL_PORT
-      - SECRET_KEY
+      - SECRET_KEY=${SECRET_KEY:?secret key must be set}
       - DATABASE_URL=mysql+pymysql://places:places@db/db?charset=utf8mb4
     volumes:
       - app_data:/project/instance
