Forced versions of flask related packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-Werkzeug~=2.0.0
+Werkzeug==2.0.2
 flask==2.0.1
-wtforms>=3.0.0
+flask-babel==2.0.0
+flask-login==0.5.0
+flask-bcrypt==0.7.1
+flask-misaka==1.0.0
+flask-migrate==3.1.0
+flask-mail==0.9.1
+flask-moment==1.0.2
+wtforms==3.0.1
 flask-wtf==1.0.0
-flask-sqlalchemy
+flask-sqlalchemy==2.5.1
+pymysql==1.0.2
+pillow>=8.0
 requests
 requests-html
-pymysql
-flask-babel
-flask-login
-flask-bcrypt
-flask-misaka
-flask-migrate
-flask-mail
-flask-moment
 python-dotenv
-pillow>=8.0
 pyjwt
 gunicorn
 is_safe_url
