Use OSM instead of non-functional mapy.cz

--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -1,12 +1,12 @@
-pylint
+pylint==2.12.2
 pylint-flask-sqlalchemy==0.2.0
-types-requests
-flake8
-mypy
-pytest
-pytest-subtests
-coverage
-pytest-cov
+types-requests==2.27.25
+flake8==4.0.1
+mypy==0.930
+pytest==6.2.5
+pytest-subtests==0.5.0
+coverage==6.2
+pytest-cov==3.0.0
 pytest-flask-sqlalchemy==1.0.2
-html5lib
-html5validate
+html5lib==1.1
+html5validate==0.0.2
